Fixed #168: Mastodon menu with horizontal scrollbars

--- a/TangerineUI-lagoon.css
+++ b/TangerineUI-lagoon.css
@@ -8,7 +8,7 @@
 
 /* 📄 Meta */
 :root {
-    --version: "v2.4.3";
+    --version: "v2.4.4";
 
     --variant-name: "Lagoon";
     --variant-emoji: "\1F420\00A0";
@@ -4191,7 +4191,6 @@ div[tabindex="-1"] + div[tabindex="-1"] > .status__wrapper > .status-reply.statu
 .app-body .column-link:not(.column-link--logo) {
     padding: 15px 5px 16px 24px;
     gap: 7px;
-    margin-left: 3px;
     border: 0;
     font-weight: 500;
     font-size: 18px;
@@ -4200,7 +4199,7 @@ div[tabindex="-1"] + div[tabindex="-1"] > .status__wrapper > .status-reply.statu
 }
 @media screen and (min-width:1175px) {
     .app-body .column-link:not(.column-link--logo) {
-        padding-left: 11px;
+        padding-left: 14px;
     }
 }
 .app-body .column-link--transparent:is(.active, .active:hover) {
